--- a/css/master.css
+++ b/css/master.css
@@ -1,8 +1,9 @@
-.header{
+.header {
     margin: 0 auto;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     text-align: center;
+    box-shadow: 0px 27px 15px -34px black;
 }
 .icons{
     max-width: 33%;
@@ -10,4 +11,7 @@
 .benefits{
   max-width: 90%;
   margin:0 auto;
+}
+h1, h2, h3, h4{
+  margin:0;
 }
