--- a/css/master.css
+++ b/css/master.css
@@ -8,12 +8,19 @@ body{
     text-align: center;
     box-shadow: 0px 27px 15px -34px black;
 }
-.icons{
-    max-width: 33%;
+.icons {
+    width: 25%;
+    float: left;
+    min-height: 220px;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    box-shadow: 1px 2px 3px #0000002b;
 }
-.benefits{
-  max-width: 90%;
-  margin:0 auto;
+.benefits {
+    width: 70%;
+    height: 200px;
+    margin: 0 auto;
 }
 h1, h2, h3, h4{
   margin:0;
