--- a/css/master.css
+++ b/css/master.css
@@ -10,13 +10,12 @@ body {
     box-shadow: 0px 27px 15px -34px black;
 }
 .icons {
-    width: 25%;
+    width: 27%;
     float: left;
-    min-height: 220px;
-    padding: 10px;
-    margin: 10px;
+    padding: 1%;
+    margin: 1%;
     text-align: center;
-    box-shadow: 1px 2px 3px #0000002b;
+    box-shadow: 1px 2px 3px #00000070;
 }
 .benefits {
     width: 70%;
