--- a/css/master.css
+++ b/css/master.css
@@ -10,9 +10,9 @@ body {
     box-shadow: 0px 27px 15px -34px black;
 }
 .icons {
-    width: 27%;
+    width: 23%;
     float: left;
-    padding: 1%;
+    padding: 2% 4%;
     margin: 1%;
     text-align: center;
     box-shadow: 1px 2px 3px #00000070;
@@ -27,4 +27,10 @@ body {
 }
 h1, h2, h3, h4{
   margin:0;
+}
+h1{
+  font-size: 22px;
+}
+h2{
+    font-size: 18px;
 }
