--- a/css/master.css
+++ b/css/master.css
@@ -38,9 +38,13 @@ h2{
     font-size: 18px;
 }
 .placeholder{
+  width: 100%;
   height: 100px;
+  background: green;
 }
 .piedavajums{
+  padding:5px;
+  width: 30%;
   height: 300px;
 }
 .cena{
