--- a/css/master.css
+++ b/css/master.css
@@ -37,10 +37,10 @@ h1 {
 h2{
     font-size: 18px;
 }
-.placeholder{
-  width: 100%;
-  height: 100px;
-  background: green;
+.placeholder {
+    width: 100%;
+    min-height: 50%;
+    background: linear-gradient(45deg, #b3b3b3, transparent);
 }
 .piedavajums{
   position: relative;
