--- a/css/master.css
+++ b/css/master.css
@@ -56,12 +56,13 @@ h2{
   height: 10%;
 }
 .piedavajums {
+    box-shadow: 1px 2px 4px grey;
     border: 1px solid red;
     border-radius: 2px;
     position: relative;
-    width: 30%;
+    width: 32%;
     height: 250px;
-    margin: 0 5px;
+    margin: 0px 10px;
 }
 .piedavajumi{
   display:flex;
