--- a/css/master.css
+++ b/css/master.css
@@ -45,15 +45,31 @@ h2{
     min-height: 50%;
     background: linear-gradient(45deg, #b3b3b3, transparent);
 }
-.kategorija{
-  width:50%;
-  height: 10%;
-  background:red;
+.kategorija {
+    width: 50%;
+    height: 10%;
+    background: red;
+    position: absolute;
+    top: 45%;
+    left: 10px;
 }
-.square{
-  background: green;
-  width:40%;
-  height: 10%;
+.square {
+    background: green;
+    width: 40%;
+    top: 10px;
+    left: 10px;
+    height: 10%;
+    position: absolute;
+}
+.circle{
+    background: green;
+    width: 40%;
+    border-radius: 100px;
+    height: 50px;
+    top: 10px;
+    left: 10px;
+    height: 10%;
+    position: absolute;
 }
 .piedavajums {
     box-shadow: 1px 2px 4px grey;
