--- a/css/master.css
+++ b/css/master.css
@@ -54,8 +54,11 @@ h2{
     left: 10px;
 }
 .square {
-    background: green;
-    width: 40%;
+    background: #fe0000;
+    width: fit-content;
+    line-height: 22px;
+    color: white;
+    padding: 2px 5px;
     top: 10px;
     left: 10px;
     height: 10%;
