--- a/css/master.css
+++ b/css/master.css
@@ -65,11 +65,11 @@ h2{
     position: absolute;
 }
 .circle {
+    font-size: 60px;
     background: red;
     color: white;
     width: 70px;
     border-radius: 100px;
-    height: 50px;
     top: -6px;
     right: -6px;
     height: 70px;
