--- a/css/master.css
+++ b/css/master.css
@@ -19,8 +19,8 @@ body {
     box-shadow: 1px 2px 3px #00000070;
 }
 .benefits {
-    width: 70%;
-    height: 200px;
+    display: flex;
+    width: 100%;
     margin: 0 auto;
 }
 .bilde {
