--- a/css/master.css
+++ b/css/master.css
@@ -27,13 +27,20 @@ body {
     margin: 10px 0;
     max-height: 100px;
 }
+p{
+    margin: 0;
+    padding: 5px;
+}
 h1, h2, h3, h4{
   margin:0;
 }
 h1 {
+    text-align: center;
     padding: 5px 0;
-    font-size: 22px;
+    font-size: 20px;
     margin: 10px 0;
+    color: #fe0000;
+    text-transform: uppercase;
 }
 h2{
     font-size: 18px;
