--- a/css/master.css
+++ b/css/master.css
@@ -86,13 +86,14 @@ h2 {
 }
 .piedavajums {
     box-shadow: 1px 2px 4px grey;
-    border: 1px solid red;
+    border: 2px solid red;
     border-radius: 2px;
     position: relative;
-    width: 32%;
-    height: 250px;
-    margin: 0px 10px;
-}
+    width: 97%;
+    max-width: 230px;
+    height: 270px;
+    margin: 0 auto;
+  }
 .piedavajumi{
   display:flex;
 }
