--- a/css/master.css
+++ b/css/master.css
@@ -55,17 +55,20 @@ h2 {
     background: linear-gradient(45deg, #b3b3b3, transparent);
 }
 .kategorija {
-    width: 50%;
-    height: 10%;
-    background: red;
+    padding: 0 5px;
+    color: white;
+    width: fit-content;
+    background: #3c3c3c;
     position: absolute;
     top: 45%;
     left: 10px;
+    font-size: 14px;
 }
 .square {
     background: #fe0000;
     width: fit-content;
-    line-height: 22px;
+    line-height: 27px;
+    font-size: 15px;
     color: white;
     padding: 2px 5px;
     top: 10px;
@@ -74,14 +77,15 @@ h2 {
     position: absolute;
 }
 .circle {
-    font-size: 60px;
-    background: red;
+    font-size: 46px;
+    background: #03A9F4;
     color: white;
-    width: 70px;
-    border-radius: 100px;
+    width: 60px;
+    text-align: center;
+    border-radius: 93px;
     top: -6px;
     right: -6px;
-    height: 70px;
+    height: 60px;
     position: absolute;
 }
 .piedavajums {
@@ -94,9 +98,9 @@ h2 {
     height: 270px;
     margin: 0 auto;
   }
-.piedavajumi{
-  display:flex;
-}
+  .piedavajumi {
+      padding: 10px;
+  }
 .cena {
     font-size: 25px;
     text-align: center;
