--- a/css/master.css
+++ b/css/master.css
@@ -51,6 +51,8 @@ h2 {
 }
 .placeholder {
     width: 100%;
+    max-height: 60%;
+    overflow: hidden;
     min-height: 50%;
     background: linear-gradient(45deg, #b3b3b3, transparent);
 }
@@ -60,9 +62,9 @@ h2 {
     width: fit-content;
     background: #3c3c3c;
     position: absolute;
-    top: 45%;
+    top: 55%;
     left: 10px;
-    font-size: 14px;
+    font-size: 16px;
 }
 .square {
     background: #fe0000;
