--- a/css/master.css
+++ b/css/master.css
@@ -102,8 +102,15 @@ h2 {
   .piedavajumi {
       padding: 10px;
   }
-  .cena {
+  .virsraksts {
       font-size: 25px;
       text-align: center;
       padding: 20px 0;
   }
+.apraksts{
+  padding: 2px;
+}
+.links{
+  color:red;
+  text-decoration: underline;
+}
