--- a/css/master.css
+++ b/css/master.css
@@ -103,9 +103,9 @@ h2 {
       padding: 10px;
   }
   .virsraksts {
-      font-size: 25px;
+      font-size: 15px;
       text-align: center;
-      padding: 20px 0;
+      padding-top: 5%;
   }
 .apraksts{
   padding: 2px;
