--- a/css/master.css
+++ b/css/master.css
@@ -5,10 +5,11 @@ body {
 }
 .header {
     margin: 0 auto;
+    height: 62px;
     width: 100%;
-    min-height: 100px;
+    padding-top: 10px;
     text-align: center;
-    box-shadow: 0px 27px 15px -35px black;
+    box-shadow: 0px 28px 12px -32px black;
 }
 .icons {
     width: 23%;
