--- a/css/master.css
+++ b/css/master.css
@@ -91,13 +91,13 @@ h2 {
     height: 60px;
     position: absolute;
 }
-.piedavajums {
+.elements {
     box-shadow: 1px 2px 4px grey;
     border: 2px solid red;
     border-radius: 2px;
     position: relative;
     max-width: 210px;
-    height: 230px;
+    height: 250px;
     margin: 0 auto;
 }
   .piedavajumi {
@@ -105,7 +105,6 @@ h2 {
   }
   .virsraksts {
       font-size: 15px;
-      text-align: center;
       padding-top: 5%;
   }
 .apraksts{
