--- a/css/master.css
+++ b/css/master.css
@@ -37,9 +37,8 @@ h1, h2, h3, h4{
 }
 h1 {
     text-align: center;
-    padding: 5px 0;
+    padding-top: 15px;
     font-size: 20px;
-    margin: 10px 0;
     color: #fe0000;
     text-transform: uppercase;
 }
