--- a/css/master.css
+++ b/css/master.css
@@ -124,8 +124,6 @@ h2 {
   font-weight: 500;
   font-size:20px;
 }
-.bullet{
-  background: red;
-  width: 20px;
-  height: 20px;
+.options{
+  text-align: left;
 }
